# digit-plexus

./: CONTRIBUTING.md  README.md  setup.py
firmware/can/: README.md
hardware/: README.md
hardware/ecad/basic/hand_logic/: ALLEGRO_CONNECTOR.SchDoc  FINGER_CONNECTORS.SchDoc  FINGER_MCU.SchDoc  FINGER_USB_HUB.SchDoc  HAND_CAN_MCU.SchDoc  ISP_CONNECTORS.SchDoc  PALM_CONNECTOR.SchDoc  THUMB_CONNECTOR.SchDoc  USB_CONNECTOR.SchDoc  USB_HUB.SchDoc  USB_HUB_6CH.SchDoc  USB_HUB_SUPPORT.SchDoc  USB_PD_POWER.SchDoc  USB_POWER.SchDoc  USD_PD.SchDoc  WALL_POWER.SchDoc  hand_logic.BomDoc  hand_logic.PCBDwf  hand_logic.PrjPcb  hand_logic.PrjPcbStructure  hand_logic.PrjPcbVariants
hardware/ecad/basic/hand_sense/: CONNECTOR.SchDoc  SENSE.SchDoc  hand_sense.BomDoc  hand_sense.PCBDwf  hand_sense.PcbDoc  hand_sense.PrjPcb  hand_sense.PrjPcbStructure
hardware/ecad/basic/sense_logic/: AUX_CONNECTOR.SchDoc  LOGIC.SchDoc  LOGIC_CONNECTOR.SchDoc  SPINE_CONNECTOR.SchDoc  USB_CONNECTOR.SchDoc  sense_logic.BomDoc  (+3 more)
mechanical/: plexus_finger_link_sense_patch.step
plexus/: README.md  install_plexus_venv.sh
plexus/ros2/: README.md
plexus/ros2/plexus_pkg/: CMakeLists.txt  __init__.py  colcon_build.sh  package.xml  setup.cfg  setup.py
plexus/ros2/plexus_pkg/launch/: allegro_hand_launch.py  allegro_node_params.yaml  allegro_node_params_127r.yaml  dual_hand_launch.py  sensor_patch_launch.py  tmr_hand_launch.py
plexus/ros2/plexus_pkg/msg/: PowerStatus.msg
plexus/ros2/plexus_pkg/plexus_pkg/: allegro_client.py  allegro_controller_node.py  allegro_driver.py  allegro_info_node.py  plexus.py  sensor_patch.py
plexus/ros2/plexus_pkg/plexus_pkg/plexus_pb_v1/: __init__.py
udev/: 99-metahand.rules  README.md  install_devices.sh
udev/rules/: 99-metahand.rules
(+23 files in other folders)
